css/style.css
:root {
  --main-color: #0f0f82;
  --bg-color: white;
  --border-color: black;
  --secondary-shade: #2c2cff;
  --cash-color: lightgreen;
  --rank-color: yellow;
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

h1 {
  font-family: 'Yanone Kaffeesatz', sans-serif;
  font-size: 64px;
  text-align: center;
  margin-bottom: 0;
  color: white;
  text-shadow: -1px 1px 4px var(--main-color),
               1px 1px 4px var(--main-color),
               1px -1px 4px var(--main-color),
               -1px -1px 4px var(--main-color);
}

.subtitle {
  font-family: 'Roboto Slab', serif;
  font-size: 24px;
  text-align: center;
  margin-top: 0;
  color: var(--main-color);
}

.heading {
  font-family: 'Yanone Kaffeesatz', sans-serif;
  font-size: 48px;
  color: var(--main-color);
  width: 256px;
  margin: 32px auto 0 auto;
  text-align: center;
}

a {
  text-decoration: none;
  color: var(--main-color);
  font-weight: bold;
  cursor: pointer;
}

table {
  border-collapse: collapse;
  border-style: none;
  margin: 16px auto;
}

th {
  font-weight: bold;
  border-bottom: 1px solid black;
}

td {
  padding: 1px 8px;
}

tr:nth-child(2n+2) {
  background-color: white;
}

tr:nth-child(2n+3) {
  background-color: lightgray;
}

button {
  cursor: pointer;
}

.num-input {
  width: 48px;
}

.guess-input {
  width: 128px;
}

.turn-indicator {
  font-family: 'Roboto Slab', serif;
  font-size: 24px;
  font-weight: bold;
  text-align: center;
  margin-bottom: 16px;
}

.modal-overlay {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(192,192,192); /* Fallback */
  background-color: rgb(0,0,0,0.5);
}

.modal {
  display: none;
  z-index: 100;
  position: fixed;

  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);

  max-height: 95vh;
  padding: 16px;
  overflow: auto;

  border: 1px solid var(--border-color);
  border-radius: 8px;
  background-color: var(--main-color);
}

.modal-title {
  color: var(--bg-color);
  font-family: 'Roboto Slab', serif;
  font-size: 32px;
  font-weight: bold;
  text-align: center;
}

.modal-content {
  width: 450px;
  max-width: 100vw;
  max-height: 400px;
  overflow: auto;

  background-color: var(--bg-color);
  border: 1px solid var(--border-color);
  padding: 16px;
  margin: 16px 0;
}

@media (max-height: 600px) {
  .modal {
    max-height: 500px;
  }

  .modal-title {
    font-size: 24px;
  }

  .modal-content {
    max-height: 350px;
  }
}

@media (max-height: 500px) {
  .modal {
    max-height: 300px;
  }

  .modal-title {
    font-size: 18px;
  }

  .modal-content {
    max-height: 150px;
  }
}

.option {
  line-height: 2.5;
}

#main-buttons {
  display: flex;
  justify-content: space-between;
  max-width: 425px;

  margin: 16px auto;
  padding: 8px;
  border: 1px solid var(--border-color);
  border-radius: 8px;
  background-color: var(--main-color);
}

.main-button {
  background-color: var(--bg-color);
  color: var(--main-color);
  width: 100px;
  font-weight: bold;
  padding: 8px;
  border: 1px solid var(--border-color);
  border-radius: 8px;
}

.main-button:hover {
  background-color: var(--secondary-shade);
  color: var(--bg-color);
}

.main-button:active {
  position: relative;
  top: 1px;
  left: 1px;
}

.main-button:disabled {
  color: darkgray;
  background-color: lightgray;
}

#player-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.player {
  width: 350px;
  border: 1px solid var(--border-color);
  border-radius: 16px;
  color: var(--bg-color);
  background-color: var(--main-color);
  text-align: center;
  margin: 8px;
}

.player-name {
  font-size: 44px;
  font-weight: bold;
  font-variant-caps: small-caps;
}

.player-stats {
  display: flex;
  justify-content: space-evenly;
}

.player-rank {
  font-size: 36px;
  font-weight: bold;
  color: var(--rank-color);
}

.player-cash {
  font-size: 36px;
  font-weight: bold;
  color: var(--cash-color);
}

#round {
  font-family: font-family: 'Yanone Kaffeesatz', sans-serif;
  font-size: 24px;
  color: var(--main-color);
  text-align: center;
  text-transform: uppercase;
  text-decoration-line: underline overline;
  margin-top: 32px;
}

#status {
  display: flex;
  justify-content: center;
  align-items: baseline;
  gap: 8px;
}

#message {
  font-family: 'Roboto Slab', serif;
  font-size: 36px;
  color: var(--main-color);
  font-variant-caps: small-caps;
}

.game-icon {
  font-size: 28px;
  color: var(--main-color);
  background-color: var(--bg-color);
  border: 1px solid var(--main-color);
  border-radius: 50%;
  margin: 0 4px;
  padding: 4px;

  font-variant-caps: normal;
  text-transform: none;
}

.game-icon:hover {
  color: var(--bg-color);
  background-color: var(--secondary-shade);
}

